--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ moviepy==1.0.1
 numpy==1.18.1
 Pillow==7.0.0
 proglog==0.1.9
+pymongo==3.10.1
 requests==2.22.0
 requests-toolbelt==0.9.1
 setuptools==45.2.0
